fix profile/comments visible and added profile/favorites

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -112,6 +112,7 @@
   box-sizing: border-box;
   width: 100%;
   display: flex;
+  justify-content: flex-start;
   padding: 5px 0;
   border-bottom: solid 1px var(--grey-color3);
 }
@@ -141,9 +142,7 @@
 
 .list-rating {
   color: var(--secondary-color);
-  position: absolute;
-  top: 0;
-  right: 0;
+  float: right;
   font-size: 0.9em;
   display: flex;
   flex-wrap: nowrap;
